--- a/demo/src/app/index.html
+++ b/demo/src/app/index.html
@@ -7,7 +7,7 @@
 
     <title>redux-websocket-demo</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
 </head>
 <body>
     <div id="root"></div>
