--- a/demo/src/app/styles/_global.scss
+++ b/demo/src/app/styles/_global.scss
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  background: linear-gradient(to right, #354353 50%, #171e26 51%);
 }
 
 #root {
